--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -54,7 +54,11 @@
   justify-content: flex-start !important;
   align-items: flex-start;
   gap: 4rem;
+  .section__title {
+   font-size: 2.5rem;
  }
+}
+
 }
 .main__button {
  color: var(--main-color);
